set(NVIMGCDCS_EXAMPLE_NAME nvimtrans)  

set(NVIMGCDCS_EXAMPLE_SRC
      main.cpp
)

add_executable(${NVIMGCDCS_EXAMPLE_NAME} ${NVIMGCDCS_EXAMPLE_SRC})

set_property(TARGET ${NVIMGCDCS_EXAMPLE_NAME} PROPERTY CUDA_SEPARABLE_COMPILATION ON)
target_link_libraries(${NVIMGCDCS_EXAMPLE_NAME} PUBLIC nvimgcodecs CUDA::cudart)

#target_link_libraries(${NVIMGCDCS_EXAMPLE_NAME} PUBLIC nvpnm_ext_static)

install(TARGETS ${NVIMGCDCS_EXAMPLE_NAME}
    DESTINATION bin COMPONENT lib
)
