set(NVIMGCDCS_LIBJPEG_TURBO_EXT_LIBRARY_NAME libjpeg_turbo_ext)

set(NVIMGCDCS_LIBJPEG_TURBO_EXT_SRC
  libjpeg_turbo_ext.cpp
  libjpeg_turbo_decoder.cpp
  jpeg_handle.cpp
  jpeg_mem.cpp
  )

add_library(${NVIMGCDCS_LIBJPEG_TURBO_EXT_LIBRARY_NAME} SHARED ${NVIMGCDCS_LIBJPEG_TURBO_EXT_SRC} ext_module.cpp)
add_library(${NVIMGCDCS_LIBJPEG_TURBO_EXT_LIBRARY_NAME}_static STATIC ${NVIMGCDCS_LIBJPEG_TURBO_EXT_SRC})

target_link_libraries(${NVIMGCDCS_LIBJPEG_TURBO_EXT_LIBRARY_NAME} PUBLIC ${JPEG_LIBRARY})

if(UNIX)
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -fPIC -fvisibility=hidden")
  set_target_properties(${NVIMGCDCS_LIBJPEG_TURBO_EXT_LIBRARY_NAME} PROPERTIES
    POSITION_INDEPENDENT_CODE ON
    PREFIX ""
    VERSION ${PROJECT_VERSION}
    NO_SONAME OFF)
else()
  set_target_properties(${NVIMGCDCS_LIBJPEG_TURBO_EXT_LIBRARY_NAME} PROPERTIES
    POSITION_INDEPENDENT_CODE ON
    VERSION ${PROJECT_VERSION}
    OUTPUT_NAME ${NVIMGCDCS_LIBJPEG_TURBO_EXT_LIBRARY_NAME}_${PROJECT_VERSION_MAJOR}
    ARCHIVE_OUTPUT_NAME ${NVIMGCDCS_LIBJPEG_TURBO_EXT_LIBRARY_NAME})
endif()

if(UNIX)
  install(TARGETS ${NVIMGCDCS_LIBJPEG_TURBO_EXT_LIBRARY_NAME} ${NVIMGCDCS_LIBJPEG_TURBO_EXT_LIBRARY_NAME}_static
    LIBRARY DESTINATION extensions NAMELINK_SKIP COMPONENT lib
    ARCHIVE DESTINATION lib64 COMPONENT lib
    PUBLIC_HEADER DESTINATION include COMPONENT lib
  )

else()
  install(TARGETS ${NVIMGCDCS_LIBJPEG_TURBO_EXT_LIBRARY_NAME}
    RUNTIME DESTINATION extensions COMPONENT lib
    LIBRARY DESTINATION lib64 COMPONENT lib
    ARCHIVE DESTINATION lib64 COMPONENT lib
    PUBLIC_HEADER DESTINATION include COMPONENT lib
  )
endif()
