set(NVIMGCDCS_NVBMP_EXT_LIBRARY_NAME nvbmp_ext)  

set(NVIMGCDCS_NVBMP_EXT_SRC
      nvbmp_ext.cpp
      encoder.cpp
      decoder.cpp
)
    
add_library(${NVIMGCDCS_NVBMP_EXT_LIBRARY_NAME} SHARED ${NVIMGCDCS_NVBMP_EXT_SRC} ext_module.cpp)
add_library(${NVIMGCDCS_NVBMP_EXT_LIBRARY_NAME}_static STATIC ${NVIMGCDCS_NVBMP_EXT_SRC})

if(UNIX)
        set_target_properties(${NVIMGCDCS_NVBMP_EXT_LIBRARY_NAME} PROPERTIES
                POSITION_INDEPENDENT_CODE ON
                VERSION ${PROJECT_VERSION}
                NO_SONAME OFF)
else()
set_target_properties(${NVIMGCDCS_NVBMP_EXT_LIBRARY_NAME} PROPERTIES 
        POSITION_INDEPENDENT_CODE ON 
        VERSION ${PROJECT_VERSION}
        OUTPUT_NAME ${NVIMGCDCS_NVBMP_EXT_LIBRARY_NAME}_${PROJECT_VERSION_MAJOR}
        ARCHIVE_OUTPUT_NAME ${NVIMGCDCS_NVBMP_EXT_LIBRARY_NAME})
endif()


if(UNIX)
        install(TARGETS ${NVIMGCDCS_NVBMP_EXT_LIBRARY_NAME} ${NVIMGCDCS_NVBMP_EXT_LIBRARY_NAME}_static
                LIBRARY DESTINATION extensions NAMELINK_SKIP COMPONENT lib
                ARCHIVE DESTINATION lib64 COMPONENT lib
                PUBLIC_HEADER DESTINATION include COMPONENT lib
        )

else()
        install(TARGETS ${NVIMGCDCS_NVBMP_EXT_LIBRARY_NAME}
                RUNTIME DESTINATION extensions COMPONENT lib
                LIBRARY DESTINATION lib64 COMPONENT lib
                ARCHIVE DESTINATION lib64 COMPONENT lib
                PUBLIC_HEADER DESTINATION include COMPONENT lib
        )
endif()

