set(NVIMGCDCS_NVJPEG2K_EXT_LIBRARY_NAME nvjpeg2k_ext)

set(NVIMGCDCS_NVJPEG2K_EXT_SRC
  jpeg2k_xm_module.cpp
  jpeg2k_xm_encoder.cpp
  jpeg2k_xm_decoder.cpp
  jpeg2k_xm_parser.cpp
)

find_package(CUDAToolkit REQUIRED)

include_directories(
  ../../include
  SYSTEM ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES}
)

add_library(${NVIMGCDCS_NVJPEG2K_EXT_LIBRARY_NAME} SHARED ${NVIMGCDCS_NVJPEG2K_EXT_SRC})

target_link_libraries(${NVIMGCDCS_NVJPEG2K_EXT_LIBRARY_NAME} PUBLIC CUDA::cudart ${NVJPEG2K_LIBRARY})

if(UNIX)
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -fPIC -fvisibility=hidden")
  set_target_properties(${NVIMGCDCS_NVJPEG2K_EXT_LIBRARY_NAME} PROPERTIES
    POSITION_INDEPENDENT_CODE ON
    VERSION ${PROJECT_VERSION}
    SOVERSION ${PROJECT_VERSION_MAJOR})
else()
  set_target_properties(${NVIMGCDCS_NVJPEG2K_EXT_LIBRARY_NAME} PROPERTIES
    POSITION_INDEPENDENT_CODE ON
    VERSION ${PROJECT_VERSION}
    OUTPUT_NAME ${NVIMGCDCS_NVJPEG2K_EXT_LIBRARY_NAME}_${PROJECT_VERSION_MAJOR}
    ARCHIVE_OUTPUT_NAME ${NVIMGCDCS_NVJPEG2K_EXT_LIBRARY_NAME})
endif()

if(UNIX)
  install(TARGETS ${NVIMGCDCS_NVJPEG2K_EXT_LIBRARY_NAME}
    LIBRARY DESTINATION plugins
    PUBLIC_HEADER DESTINATION include
  )

else()
  install(TARGETS ${NVIMGCDCS_NVJPEG2K_EXT_LIBRARY_NAME}
    RUNTIME DESTINATION plugins
    LIBRARY DESTINATION lib64
    ARCHIVE DESTINATION lib64
    PUBLIC_HEADER DESTINATION include
  )
endif()
