set(NVIMGCDCS_NVPNM_EXT_LIBRARY_NAME nvpnm_ext)  

set(NVIMGCDCS_NVPNM_EXT_SRC
      encoder.cpp
      nvpnm_ext.cpp
)
include_directories(SYSTEM ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES})

add_library(${NVIMGCDCS_NVPNM_EXT_LIBRARY_NAME} SHARED ${NVIMGCDCS_NVPNM_EXT_SRC} ext_module.cpp)
add_library(${NVIMGCDCS_NVPNM_EXT_LIBRARY_NAME}_static STATIC ${NVIMGCDCS_NVPNM_EXT_SRC})

if(UNIX)
set_target_properties(${NVIMGCDCS_NVPNM_EXT_LIBRARY_NAME} PROPERTIES 
        POSITION_INDEPENDENT_CODE ON 
        VERSION ${PROJECT_VERSION}
        SOVERSION ${PROJECT_VERSION_MAJOR} )
else()
set_target_properties(${NVIMGCDCS_NVPNM_EXT_LIBRARY_NAME} PROPERTIES 
        POSITION_INDEPENDENT_CODE ON 
        VERSION ${PROJECT_VERSION}
        OUTPUT_NAME ${NVIMGCDCS_NVPNM_EXT_LIBRARY_NAME}_${PROJECT_VERSION_MAJOR}
        ARCHIVE_OUTPUT_NAME ${NVIMGCDCS_NVPNM_EXT_LIBRARY_NAME})
endif()


if(UNIX)
        install(TARGETS ${NVIMGCDCS_NVPNM_EXT_LIBRARY_NAME}
                LIBRARY DESTINATION extensions
                PUBLIC_HEADER DESTINATION include
        )

else()
install(TARGETS  ${NVIMGCDCS_NVPNM_EXT_LIBRARY_NAME}
    RUNTIME DESTINATION extensions
    LIBRARY DESTINATION lib64
    ARCHIVE DESTINATION lib64
    PUBLIC_HEADER DESTINATION include 
        )
endif()

