set(NVIMGCDCS_OPENCV_EXT_LIBRARY_NAME opencv_ext)

set(NVIMGCDCS_LIBJPEG_TURBO_EXT_SRC
  opencv_ext.cpp
  opencv_decoder.cpp
  )

add_library(${NVIMGCDCS_OPENCV_EXT_LIBRARY_NAME} SHARED ${NVIMGCDCS_LIBJPEG_TURBO_EXT_SRC} ext_module.cpp)
add_library(${NVIMGCDCS_OPENCV_EXT_LIBRARY_NAME}_static STATIC ${NVIMGCDCS_LIBJPEG_TURBO_EXT_SRC})

target_link_libraries(${NVIMGCDCS_OPENCV_EXT_LIBRARY_NAME} PUBLIC ${OpenCV_LIBRARIES})

if(UNIX)
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -fPIC -fvisibility=hidden")
  set_target_properties(${NVIMGCDCS_OPENCV_EXT_LIBRARY_NAME} PROPERTIES
    POSITION_INDEPENDENT_CODE ON
    VERSION ${PROJECT_VERSION}
    SOVERSION ${PROJECT_VERSION_MAJOR})
else()
  set_target_properties(${NVIMGCDCS_OPENCV_EXT_LIBRARY_NAME} PROPERTIES
    POSITION_INDEPENDENT_CODE ON
    VERSION ${PROJECT_VERSION}
    OUTPUT_NAME ${NVIMGCDCS_OPENCV_EXT_LIBRARY_NAME}_${PROJECT_VERSION_MAJOR}
    ARCHIVE_OUTPUT_NAME ${NVIMGCDCS_OPENCV_EXT_LIBRARY_NAME})
endif()

if(UNIX)
  install(TARGETS ${NVIMGCDCS_OPENCV_EXT_LIBRARY_NAME}
    LIBRARY DESTINATION extensions
    PUBLIC_HEADER DESTINATION include
  )

else()
  install(TARGETS ${NVIMGCDCS_OPENCV_EXT_LIBRARY_NAME}
    RUNTIME DESTINATION extensions
    LIBRARY DESTINATION lib64
    ARCHIVE DESTINATION lib64
    PUBLIC_HEADER DESTINATION include
  )
endif()
